fixed issues in descriptions

--- a/backend/v0_2/src/engines/RandomEnginev0.html
+++ b/backend/v0_2/src/engines/RandomEnginev0.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="descriptions.css">
+<!--        <link rel="stylesheet" href="descriptions.css"> -->
     </head>
     <body style="padding: 40px;">
         <div style="padding: 40px;font-family: sans; line-height: 2em;">
